Add support for "setConsumeRollupEvent" on Mac OS X. b=415440 r=mstange sr=roc